<resources>
    <string name="app_name">PetCare</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign up</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_confirm_email">Confirm Email</string>
    <string name="prompt_name">First Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="yelp_key">Fw6kAxs9ZQopB96cUk7r9Fg0WnAZxIkU08pvzd8IDCAR8NKeHdSjWDEeNJYj_VO2D--GzdiGcFLIxECLWVjfgCkZUV-gg1RPL1_b5knEUyjbSN0MLrHs9_XXMWaaXHYx</string>

    <!-- Strings related to adding a pet -->
    <string name="prompt_pet_name">Pet\'s name</string>
    <string name="prompt_birthdate">Pet\'s birthdate</string>
    <string name="prompt_pet_weight">Pet\'s weight</string>
    <string name="add_pet_text">Add Pet</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_user__profile">User_Profile</string>
    <string name="title_activity_pet__profile">Pet_Profile</string>
    <string name="title_activity_edit__user">Edit_User</string>
    <string name="title_activity_edit__pet">Edit_Pet</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="title_activity_reminder__edit">Reminder_Edit</string>

    <!-- Strings related to user profile -->
    <string name="user_prof_image">User Profile Image</string>

    <!-- Strings related to user map search -->
    <string name="title_activity_map_search">Map Search</string>
    <string name="search_msg">Search for nearby stores and services for your pet!</string>
    <string name="title_activity_add_reminder">AddReminderActivity</string>
    <string name="userName">User Name</string>
    <string name="user_email_text">Email:</string>
    <string name="username_label_text">Username:</string>
    <string name="user_profile_pic_desc">User Profile Picture</string>
    <string name="username">user name here</string>
    <string name="user_email">user email here</string>
    <string name="user_pet_label">Your Pets</string>
    <string name="button_edit_user_text">Edit</string>
    <string name="create_reminder_button">Create Reminder</string>
    <string name="create_reminder_label">Create Reminder</string>
    <string name="reminder_text_label">Notes</string>
    <string name="pet_name_label">Pet Name</string>
    <string name="edit_pet_button">Edit</string>
    <string name="pet_age_label">Age:</string>
    <string name="pet_weight_label">Weight:</string>
    <string name="pet_reminders_label">Reminders</string>
    <string name="walk_button">Start Walk</string>
    <string name="title_activity_walk_pet">WalkPetActivity</string>
    <string name="reminder_label">Reminder</string>
    <string name="edit_button_text">Edit</string>
    <string name="reminder_button_example">Reminder</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="gallery_button">Gallery</string>
    <string name="edit_user_label">Edit User</string>
    <string name="user_name">Name:</string>
    <string name="edit_pet_label">Edit Pet</string>
    <string name="reminder_date_label">Date:</string>
    <string name="reminder_type_label">Type:</string>
    <string name="reminder_note_label">Notes</string>
    <string name="edit_reminder_label">Edit Reminder</string>
    <string name="title_activity_pet_list">PetListActivity</string>
    <string name="title_activity_temperature">TemperatureActivity</string>
    <string name="title_activity_location">locationActivity</string>
    <!-- Strings related to adding a group -->
    <string name="prompt_group_name">Group Invite Code</string>
    <string name="button_add_group">Join Group</string>
    <string name="walk_button_text">Start Walk</string>
</resources>
