<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/confirm_email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_confirm_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirm_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_confirm_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signup_act_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text" />

</LinearLayout>