<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_pet_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_birthdate"/>
    <DatePicker
        android:id="@+id/birthdate_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        android:calendarViewShown="false"
        />

    <EditText
        android:id="@+id/weight_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_pet_weight"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_pet_text"
        style="@style/ButtonTheme"/>

</LinearLayout>